# PhaseJumpPro

./: .gitignore  .gitmodules  CodeStyle.md  LICENSE  README.md  index.md
Documentation/: Examples Info.xlsx
Experimental/: Experimental Readme.md
Experimental/PhaseJumpGodot/: HelloScene.cs  icon.svg.import
Experimental/PhaseJumpUnity/ProjectSettings/: GraphicsSettings.asset  TagManager.asset
Experimental/Swift/PhaseJumpPro/: Package.swift  README.md
Kaiju/Xcode/Kaiju/: DebugConfig.xcconfig  Kaiju C# to C++ Rules.xlsx
Phase Jump/Assets/: InitTestScene636792614431586340.unity
Phase Jump/Assets/Art/: Heart.prefab  (+1 more)
Phase Jump/Logs/: ApiUpdaterCheck.txt
Phase Jump/ProjectSettings/: ProjectSettings.asset  TagManager.asset
Phase Jump/Temp/: UnityTempFile-f91a8f078fe8a448b945ae2bcc2ca0a4
Phase Jump/UserSettings/: EditorUserSettings.asset
PhaseJump/Windows/: .gitignore  CMakeLists.txt  main.cpp
PhaseJumpGodot/: hello-scene.tscn  project.godot
PhaseJumpGodot/PhaseJumpPro/: TestAttribute.cs
PhaseJumpPro/: .gitignore
PhaseJumpPro/ProjectSettings/: ProjectSettings.asset
PhaseJumpUnity/ProjectSettings/: EditorBuildSettings.asset
modules/: camera.md  classes.md  core.md  extensions.md  geometry.md  go.md  input.md
modules/camera/: SimpleCameraInputControlScheme.md  camera.md
modules/classes/: classes.md
modules/collections/: collections.md
modules/core/: Node2D.md  core.md
modules/interface/: interface.md
modules/layout/: SomeGameObjectsLayout.md  layout.md
modules/model/: model.md
phasejump-swift/PhaseJumpPro/: Package.swift  README.md
(+3702 files in other folders)
